# cli

./: .gitignore  README.md  pyproject.toml  server.py
scripts/: test-cli.sh  test-mcp.py
src/protowall/: __init__.py  cli.py  client.py  mcp_server.py
