[project]
name = "protowall"
version = "0.1.1"
description = "CLI and MCP server for managing ProtoWall projects, invites, and access"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "ProtoWall", email = "hello@protowall.app"}]
dependencies = [
    "httpx>=0.27.0",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
protowall = "protowall.cli:main"
protowall-mcp = "protowall.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protowall"]
